# ningitidy

./: CMakeLists.txt  README.rst  conanfile.py
src/: CMakeLists.txt  cache.proto  check.cpp  summarize_inputs.cpp  test_protocol.cpp
